--- a/_posts/0000-01-02-CRay220.md
+++ b/_posts/0000-01-02-CRay220.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+![image](https://user-images.githubusercontent.com/79734951/109375523-5c582580-788b-11eb-860e-f66301bf97a5.png)
 Use the left arrow to go back!
